# gh-automation-base

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: run-task.yml
.github/workflows/: run-task.yml
gh_automation_base/: __init__.py  cli.py  config.py
gh_automation_base/pipelines/: quotes.py
